--- a/package.json
+++ b/package.json
@@ -9,14 +9,20 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@jaucordi1/react-table-component": "^0.0.9",
     "@reduxjs/toolkit": "^1.9.3",
+    "formik": "^2.2.9",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-modal": "^3.16.1",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.9.0",
-    "typescript": "^5.0.2"
+    "redux": "^4.2.1",
+    "typescript": "^5.0.2",
+    "yup": "^1.0.2"
   },
   "devDependencies": {
+    "@types/node": "^18.15.9",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
     "@vitejs/plugin-react": "^3.1.0",
