--- a/package.json
+++ b/package.json
@@ -9,14 +9,17 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@jaucordi1/react-table-component": "^0.0.9",
+    "@jaucordi1/react-table-component": "^1.0.2",
     "@reduxjs/toolkit": "^1.9.3",
+    "classnames": "^2.3.2",
     "formik": "^2.2.9",
     "react": "^18.2.0",
+    "react-datepicker": "^4.11.0",
     "react-dom": "^18.2.0",
     "react-modal": "^3.16.1",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.9.0",
+    "react-select": "^5.7.3",
     "redux": "^4.2.1",
     "typescript": "^5.0.2",
     "yup": "^1.0.2"
@@ -24,7 +27,9 @@
   "devDependencies": {
     "@types/node": "^18.15.9",
     "@types/react": "^18.0.28",
+    "@types/react-datepicker": "^4.11.0",
     "@types/react-dom": "^18.0.11",
+    "@types/react-modal": "^3.16.0",
     "@vitejs/plugin-react": "^3.1.0",
     "sass": "^1.59.3",
     "vite": "^4.2.0"
